--- a/public/game.html
+++ b/public/game.html
@@ -21,9 +21,8 @@
   <link rel="stylesheet"
   href="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.css"
   integrity="sha384-q94+BZtLrkL1/ohfjR8c6L+A6qzNH9R2hBLwyoAfu3i/WCvQjzL2RQJ3uNHDISdU"
-  crossorigin="anonymous">
-</head>
-
+  crossorigin="anonymous"></head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" integrity="sha512-vKMx8UnXk60zUwyUnUPM3HbQo8QfmNx7+ltw8Pm5zLusl1XIfwcxo8DbWCqMGKaWeNxWA8yrx5v3SaVpMvR3CA==" crossorigin="anonymous" />
 <body>
 
     <section class="hero mt-0 pt-3">
@@ -42,8 +41,8 @@
                                     <div class="col ">
                                         <div class="card">
                                             <div class="card-body text-right ">
-                                                <h1 class="display-1 d-flex justify-content-end text-right">
-                                                    5
+                                                <h1 id="mScore" class="display-1 d-flex justify-content-end text-right">
+                                                    0
                                                 </h1>
                                                 <p class=" mb-0 text-right">
                                                     Your score
@@ -54,8 +53,8 @@
                                     <div class="col ">
                                         <div class="card">
                                             <div class="card-body text-right ">
-                                                <h1 class="display-1 d-flex justify-content-end text-right">
-                                                    3
+                                                <h1 id="oScore" class="display-1 d-flex justify-content-end text-right">
+                                                    0
                                                 </h1>
                                                 <p class=" mb-0 text-right">
                                                     Opponent's score
@@ -65,9 +64,9 @@
                                     </div>
                                 </div>
                                 
-                                <div class="alert alert-primary mt-3 text-center" role="alert">
-                                    Waiting for opponent's move ..
-                                  </div>
+                               <div id="message-board">
+                                
+                               </div>
                                 <div class=" mt-0">
                                     <h4 class="text-muted pt-3 pb-2">Moves history </h4>
                                       <ul style = "max-height: 298px ;height: 298px;
@@ -120,6 +119,7 @@
 <!-- Vendor JS Files -->
 <script src="assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
 <script src="assets/vendor/aos/aos.js"></script>
+
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha384-ZvpUoO/+PpLXR1lu4jmpXWu80pZlYUAfxl5NsBMWOEPSjUn/6Z/hRTt8+pR6L4N2"
         crossorigin="anonymous"></script>
@@ -127,11 +127,14 @@
 <script src="https://unpkg.com/@chrisoakman/chessboardjs@1.0.0/dist/chessboard-1.0.0.min.js"
         integrity="sha384-8Vi8VHwn3vjQ9eUHUxex3JSN/NFqUg3QbPyX8kWyb93+8AC/pPWTzj+nHtbC5bxD"
         crossorigin="anonymous"></script>
-<!-- Template Main JS File -->
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js" integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw==" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js" integrity="sha512-xRllwz2gdZciIB+AkEbeq+gVhX8VB8XsfqeFbUh+SzHlN96dEduwtTuVuc2u9EROlmW9+yhRlxjif66ORpsgVA==" crossorigin="anonymous"></script>
+<script src="assets/js/game.js"></script>
 <script src="assets/js/main.js"></script>
-<script>
-    var board = Chessboard('myBoard','start')
-</script>
+
 </body>
 
 </html>
